--- a/example/console.html
+++ b/example/console.html
@@ -34,29 +34,14 @@
     <script>
         // 実行開始時からの経過時間
         var time;
-        var endpoint1 = 'https://waiter-prototype-development02.azurewebsites.net';
-        var endpoint2 = 'https://waiter-prototype-development03.azurewebsites.net';
-        var endpoint3 = 'https://waiter-prototype-development04.azurewebsites.net';
+        var WAITER_ENDPOINT = 'http://localhost:8081';
 
-        var accessToken1;
-        var accessToken2;
-        var accessToken3;
-
-        var numberOfPassportsIssuedWithMongoDB;
         var numberOfPassportsIssuedWithRedis;
-        var numberOfPassportsIssuedWithSqlServer;
-
-        var sumOfResponseTimesMongoDB;
-        var numberOfResponsesMongoDB;
         var sumOfResponseTimesRedis;
         var numberOfResponsesRedis;
-        var sumOfResponseTimesSqlServer;
-        var numberOfResponsesSqlServer;
 
         var timerChart;
-        var timerMongoDB;
         var timerRedis;
-        var timerSqlServer;
 
         function execute() {
             // 実行中であれば中止してから
@@ -66,54 +51,11 @@
 
             // データ初期化
             time = new Date();
-            numberOfPassportsIssuedWithMongoDB = 0;
             numberOfPassportsIssuedWithRedis = 0;
-            numberOfPassportsIssuedWithSqlServer = 0;
-            sumOfResponseTimesMongoDB = 0;
-            numberOfResponsesMongoDB = 0;
             sumOfResponseTimesRedis = 0;
             numberOfResponsesRedis = 0;
-            sumOfResponseTimesSqlServer = 0;
-            numberOfResponsesSqlServer = 0;
 
-            // アクセストークンを取得してからグラフ描画を始める
-            $.ajax({
-                url: endpoint1 + '/oauth/token',
-                method: 'POST',
-                data: {
-                    grant_type: 'client_credentials',
-                    client_id: 'motionpicture',
-                    scope: ['admin']
-                }
-            }).done(function (data) {
-                accessToken1 = data.access_token;
-
-                $.ajax({
-                    url: endpoint2 + '/oauth/token',
-                    method: 'POST',
-                    data: {
-                        grant_type: 'client_credentials',
-                        client_id: 'motionpicture',
-                        scope: ['admin']
-                    }
-                }).done(function (data) {
-                    accessToken2 = data.access_token;
-
-                    $.ajax({
-                        url: endpoint3 + '/oauth/token',
-                        method: 'POST',
-                        data: {
-                            grant_type: 'client_credentials',
-                            client_id: 'motionpicture',
-                            scope: ['admin']
-                        }
-                    }).done(function (data) {
-                        accessToken3 = data.access_token;
-
-                        startCharts();
-                    });
-                });
-            });
+            startCharts();
         }
 
         function startCharts() {
@@ -143,23 +85,7 @@
                     data: [
                         {
                             type: "spline",
-                            name: "MongoDB",
-                            showInLegend: true,
-                            dataPoints: [
-                                { x: time, y: 0 }
-                            ]
-                        },
-                        {
-                            type: "spline",
                             name: "Redis",
-                            showInLegend: true,
-                            dataPoints: [
-                                { x: time, y: 0 }
-                            ]
-                        },
-                        {
-                            type: "spline",
-                            name: "SQL Server",
                             showInLegend: true,
                             dataPoints: [
                                 { x: time, y: 0 }
@@ -191,23 +117,7 @@
                     data: [
                         {
                             type: "spline",
-                            name: "MongoDB",
-                            showInLegend: true,
-                            dataPoints: [
-                                { x: time, y: 0 }
-                            ]
-                        },
-                        {
-                            type: "spline",
                             name: "Redis",
-                            showInLegend: true,
-                            dataPoints: [
-                                { x: time, y: 0 }
-                            ]
-                        },
-                        {
-                            type: "spline",
-                            name: "SQL Server",
                             showInLegend: true,
                             dataPoints: [
                                 { x: time, y: 0 }
@@ -230,9 +140,7 @@
                     data: [{
                         type: "bar",
                         dataPoints: [
-                            { label: "MongoDB", y: 0 },
                             { label: "Redis", y: 0 },
-                            { label: "SQL Server", y: 0 }
                         ]
                     }]
                 }
@@ -247,21 +155,13 @@
                 var time = new Date();
                 // 時点での発行数データを追加
                 var numberOfDataPoints = 50;
-                chart1.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithMongoDB });
-                chart1.options.data[1].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
-                chart1.options.data[2].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithSqlServer });
+                chart1.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
                 chart1.options.data[0].dataPoints = chart1.options.data[0].dataPoints.slice(-numberOfDataPoints);
-                chart1.options.data[1].dataPoints = chart1.options.data[1].dataPoints.slice(-numberOfDataPoints);
-                chart1.options.data[2].dataPoints = chart1.options.data[2].dataPoints.slice(-numberOfDataPoints);
                 chart1.options.axisY.minimum = chart1.options.data[0].dataPoints[0].y;
 
-                chart2.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithMongoDB });
-                chart2.options.data[1].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
-                chart2.options.data[2].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithSqlServer });
+                chart2.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
 
-                chart3.options.data[0].dataPoints[0].y = sumOfResponseTimesMongoDB / numberOfResponsesMongoDB;
-                chart3.options.data[0].dataPoints[1].y = sumOfResponseTimesRedis / numberOfResponsesRedis;
-                chart3.options.data[0].dataPoints[2].y = sumOfResponseTimesSqlServer / numberOfResponsesSqlServer;
+                chart3.options.data[0].dataPoints[0].y = sumOfResponseTimesRedis / numberOfResponsesRedis;
 
                 chart3.render();
                 chart1.render();
@@ -270,41 +170,17 @@
 
             // 許可証を発行し続ける
             const intervalOfIssuingPassport = ($('input[name="intervalOfIssuingPassport"]').val()) ? parseInt($('input[name="intervalOfIssuingPassport"]').val(), 10) : 500;
-            timerMongoDB = setInterval(function () {
-                var start;
-                $.ajax({
-                    url: endpoint1 + '/passports?db=mongodb',
-                    method: 'POST',
-                    data: {
-                        scope: 'testscope'
-                    },
-                    beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken1);
-                        start = new Date();
-                    }
-                }).done(function (data) {
-                    if (data.token) {
-                        numberOfPassportsIssuedWithMongoDB += 1;
-                    }
-                }).fail(function (jqXHR, textStatus) {
-                    console.error(jqXHR, textStatus);
-                }).always(function () {
-                    sumOfResponseTimesMongoDB += new Date() - start;
-                    numberOfResponsesMongoDB += 1;
-                    console.log('sumOfResponseTimesMongoDB, numberOfResponsesMongoDB', sumOfResponseTimesMongoDB, numberOfResponsesMongoDB);
-                });
-            }, intervalOfIssuingPassport);
-
             timerRedis = setInterval(function () {
                 var start;
                 $.ajax({
-                    url: endpoint2 + '/passports?db=redis',
+                    url: WAITER_ENDPOINT + '/passports',
                     method: 'POST',
                     data: {
+                        clientId: 'clientId',
                         scope: 'testscope'
                     },
                     beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken2);
+                        // xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken2);
                         start = new Date();
                     }
                 }).done(function (data) {
@@ -319,31 +195,6 @@
                     console.log('sumOfResponseTimesRedis, numberOfResponsesRedis', sumOfResponseTimesRedis, numberOfResponsesRedis);
                 });
             }, intervalOfIssuingPassport);
-
-            timerSqlServer = setInterval(function () {
-                var start;
-                $.ajax({
-                    url: endpoint3 + '/passports?db=sqlserver',
-                    method: 'POST',
-                    data: {
-                        scope: 'testscope'
-                    },
-                    beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken3);
-                        start = new Date();
-                    }
-                }).done(function (data) {
-                    if (data.token) {
-                        numberOfPassportsIssuedWithSqlServer += 1;
-                    }
-                }).fail(function (jqXHR, textStatus) {
-                    console.error(jqXHR, textStatus);
-                }).always(function () {
-                    sumOfResponseTimesSqlServer += new Date() - start;
-                    numberOfResponsesSqlServer += 1;
-                    console.log('sumOfResponseTimesSqlServer, numberOfResponsesSqlServer', sumOfResponseTimesSqlServer, numberOfResponsesSqlServer);
-                });
-            }, intervalOfIssuingPassport);
         }
 
         function cancel() {
@@ -351,14 +202,8 @@
             if (timerChart !== undefined) {
                 clearInterval(timerChart);
             }
-            if (timerMongoDB !== undefined) {
-                clearInterval(timerMongoDB);
-            }
             if (timerRedis !== undefined) {
                 clearInterval(timerRedis);
-            }
-            if (timerSqlServer !== undefined) {
-                clearInterval(timerSqlServer);
             }
         }
     </script>
@@ -375,6 +220,36 @@
 
         <div id="page-wrapper">
             <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input class="form-control" name="clientId" placeholder="クライアントID">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" name="scope" placeholder="スコープ">
+                            </div>
+
+                            <button type="button" class="btn btn-default" onclick="updateNow();">更新</button>
+                        </form>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">現在の許可証発行数</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer-now" style="width: 100%; height: 300px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
                 <div class="row">
                     <div class="col-lg-12">
                         <form class="form-inline">
